...
                    sectionIdForHighlights: _sectionIdForTracking,
                    sectionTitle: widget.sectionTitle,
                    versesRangeStr: widget.versesRangeStr,
                  ),
                const Divider(height: 20),
                Row(
                  // ... (seu rodapé com "Mais Estudos" e "Marcar como Lido")
                  mainAxisAlignment: MainAxisAlignment.spaceBetween,
                  children: [
                    TextButton.icon(
                      icon: AnimatedRotation(
                        turns: _showResources ? 0.5 : 0.0,
                        duration: const Duration(milliseconds: 250),
...
                                    ? theme.primaryColor
                                    : theme.iconTheme.color?.withOpacity(0.8),
                                size: 20,
                              ),
                              const SizedBox(width: 6),
                              Text(
                                currentIsRead ? "Lido" : "Marcar como Lido",
                                style: TextStyle(
                                  color: currentIsRead
                                      ? theme.primaryColor
                                      : theme.textTheme.bodyMedium?.color
                                          ?.withOpacity(0.9),
                                  fontSize: 13,
...
