...
            double ntProgress = (totalSectionsInNT > 0)
                ? (totalReadSectionsNT / totalSectionsInNT).clamp(0.0, 1.0)
                : 0.0;

            return Column(
              children: [
                Text("Progresso Geral da Bíblia",
                    style: theme.textTheme.titleLarge),
                const SizedBox(height: 24),
                Row(
                  crossAxisAlignment: CrossAxisAlignment.center,
                  children: [
                    SizedBox(
...
